--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ botocore==1.12.233
 Click==7.0
 docutils==0.15.2
 Flask==1.1.1
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 jmespath==0.9.4
