--- a/devops/ansible/deploy.yml
+++ b/devops/ansible/deploy.yml
@@ -1,4 +1,15 @@
 ---
+- hosts: ssml-server
+  tasks:
+  - name: send private key of git repository
+    copy:
+      src: ../ssh-keys/gitrepo
+      dest: /home/{{ ansible_ssh_user }}/.ssh/gitrepo
+  - name: send aws credentials
+    copy:
+      src: .aws
+      dest: /home/{{ ansible_ssh_user }}/
+
 # Install system apt packages
 - hosts: ssml-server
   become: yes
@@ -11,12 +22,7 @@
       - python3-pip
       - python3-dev
       - nginx
-      - gunicorn3
       - git-core
-  - name: send private key of git repository
-    copy:
-      src: ../ssh-keys/gitrepo
-      dest: /home/{{ ansible_ssh_user }}/.ssh/gitrepo
   - name: clone repo
     git:
       repo: 'git@bitbucket.org:ssml-project/ssml-console.git'
@@ -36,14 +42,13 @@
       name: virtualenv
       executable: pip3
 
-
 # Install the app, note: don't do these tasks with become sudo
 - hosts: ssml-server
   tasks:
   - name: install modules in a virtualenv
     pip:
       requirements: /home/{{ ansible_ssh_user }}/ssml-console/requirements.txt
-      virtualenv: /home/{{ ansible_ssh_user }}/venv-ssml-console
+      virtualenv: /home/{{ ansible_ssh_user }}/ssml-console/venv
       virtualenv_python: python3.6
 
 # Configure app systemd service and nginx
@@ -61,15 +66,14 @@
     template:
       src: .nginx
       dest: /etc/nginx/sites-available/ssml
-  #- name: remove default nginx site config
-  #  file: path=/etc/nginx/sites-enabled/default state=absent
-  # - command: mv /etc/nginx/sites-enabled/default /tmp/nginx.sites-enabled.default
-  #- name: enable nginx site
-  #  file:
-  #    src: /etc/nginx/sites-available/ssml
-  #    dest: /etc/nginx/sites-enabled/default
-  #    state: link
-  #    force: yes
+  - name: remove default nginx site config
+    file: path=/etc/nginx/sites-enabled/default state=absent
+  - name: enable nginx site
+    file:
+      src: /etc/nginx/sites-available/ssml
+      dest: /etc/nginx/sites-enabled/default
+      state: link
+      force: yes
   - name: restart nginx
     systemd: name=nginx state=restarted enabled=yes
   - name: open firewall for nginx
