--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+awscli==1.16.248
 boto3==1.9.233
-botocore==1.12.233
+botocore==1.12.238
 Click==7.0
+colorama==0.3.9
 docutils==0.15.2
 Flask==1.1.1
 gunicorn==19.9.0
@@ -8,7 +10,10 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 jmespath==0.9.4
 MarkupSafe==1.1.1
+pyasn1==0.4.7
 python-dateutil==2.8.0
+PyYAML==5.1.2
+rsa==3.4.2
 s3transfer==0.2.1
 six==1.12.0
 urllib3==1.25.5
