--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Click==7.0
 colorama==0.3.9
 docutils==0.15.2
 Flask==1.1.1
+Flask-SQLAlchemy==2.4.1
 gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
@@ -16,5 +17,6 @@ PyYAML==5.1.2
 rsa==3.4.2
 s3transfer==0.2.1
 six==1.12.0
+SQLAlchemy==1.3.10
 urllib3==1.25.5
 Werkzeug==0.16.0
