--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -84,3 +83,5 @@ venv-lambda/
 #App
 /src/uploads/
 .temp
+/migrations/
+/storage.db
