--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,28 @@
+alembic==1.2.1
 awscli==1.16.248
 boto3==1.9.233
 botocore==1.12.238
+certifi==2019.9.11
+chardet==3.0.4
 Click==7.0
 colorama==0.3.9
 docutils==0.15.2
 Flask==1.1.1
+Flask-Migrate==2.5.2
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 gunicorn==19.9.0
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 jmespath==0.9.4
+Mako==1.1.0
 MarkupSafe==1.1.1
 pyasn1==0.4.7
 python-dateutil==2.8.0
+python-editor==1.0.4
 PyYAML==5.1.2
+requests==2.22.0
 rsa==3.4.2
 s3transfer==0.2.1
 six==1.12.0
